--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>BioData server</title>
+    <title>BioCall User</title>
     <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <style>
@@ -84,7 +84,7 @@
     Chrome <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.-->
     <div class="container">
-      <h1>BioData server</h1>
+      <h1>Connect to BioCall</h1>
       <span id="connect-status">Currently not connected to server</span>
       <div class="dual-input">
         <input id="select-server" type="text" placeholder="Server to connect to" value="http://127.0.0.1:4001">
